fix Spacing of tr in ihr-mehrwert.scss

--- a/_includes/styles/ihr-mehrwert.scss
+++ b/_includes/styles/ihr-mehrwert.scss
@@ -49,8 +49,14 @@
     }
 
     tr{
-      height: 66px;
+      height: 3.65em;
       vertical-align: top;
-    }
+
+        @media only screen and (max-width: 533px) {
+          margin-top: 2em;
+          height: auto;
+          display: inline-block;
+        }
+      }
   }
 }
